--- a/index.css
+++ b/index.css
@@ -153,6 +153,34 @@ animation-name: motion;
     text-align: center;
 }
 
+#troll{
+  width: 98.1%;
+  height: 80%;
+  display: block;
+  font-size: 44px;
+  font-family: 'Spirax', cursive;
+  color: #F3CEED; 
+background-image: url('trolly.gif');
+background-repeat: no-repeat;
+background-position: center;
+background-size: contain;
+}
+
+#ttext{
+  width: 100%;
+  height: 100%;
+  display: block;
+  font-size: 44px;
+  font-family: 'Spirax', cursive;
+  color: #F3CEED; 
+   background: linear-gradient(bottom, rgba(189, 69, 241 ,1), rgba(151, 129, 145,1), rgba(189, 69, 241,1)); 
+  background: -webkit-linear-gradient(bottom, rgba(189, 69, 241,1), rgba(151, 129, 145,1), rgba(189, 69, 241,1)); 
+  background: -moz-linear-gradient(bottom, rgba(189, 69, 241,1), rgba(151, 129, 145,1), rgba(189, 69, 241,1));
+  text-align: center;
+  margin-top: -10%;
+}
+
+
 #toolkit{
   margin-top: -14%;
 }
@@ -175,9 +203,56 @@ animation-name: motion;
 
 #checks{
   display: block;
-  position: absolute;
-  z-index: 9999;
-  top: 350%;
+  font-size: 44px;
+  font-family: 'Spirax', cursive;
+  color: #F3CEED; 
+   background: linear-gradient(bottom, rgba(137,3,104 ,1), rgba(151, 129, 145,1), rgba(160,4,122,1)); 
+  background: -webkit-linear-gradient(bottom, rgba(137,3,104,1), rgba(151, 129, 145,1), rgba(160,4,122,1)); 
+  background: -moz-linear-gradient(bottom, rgba(137,3,104,1), rgba(151, 129, 145,1), rgba(160,4,122,1));
+  text-align: center;
+  margin-top: -14%;
+}
+
+footer {
+   display: block;
+      font-family: 'Spirax', cursive;
+      font-size: 48px;
+      background-color: grey;
+      color: #F3CEED;
+      margin-top: -14%;
+}
+
+
+input[type=text], select, textarea {
+    width: 100%; 
+    padding: 14px; 
+    border: 2px solid #333;]
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 4px; 
+    margin-bottom: 14px;
+}
+
+
+input[type=submit] {
+    background-color: #9A7ABB;
+    color: #F3CEED;
+    padding: 20px 24px;
+    border: none;
+    border-radius: 4px;
+}
+
+
+input[type=submit]:hover {
+    background-color: #473644;
+}
+
+
+.forms {
+    border-radius: 5px;
+    background-color: grey;
+    padding: 20px;
+    text-align: center;
 }
 
 .parallax {
@@ -191,7 +266,40 @@ animation-name: motion;
     background-size: cover;
 }
 
+.parallaxhalf {
+    background-image: url('lay.jpg');
+    max-width: 100%;
+    z-index: -900;
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .parallaxone {
+    background-image: url('home.jpg');  
+    max-width: 100%;
+    z-index: -900;
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallaxtwo {
+    background-image: url('cali.jpg');  
+    max-width: 100%;
+    z-index: -900;
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallaxthree {
     background-image: url('render.jpg');  
     max-width: 100%;
     z-index: -900;
@@ -201,6 +309,7 @@ animation-name: motion;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 
   .container {
   position: relative;
